# cougars-dev

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.sh  cougars.repos  deploy.sh  simple_sysid.py  system_id.py  update.sh
.devcontainer/: devcontainer.json  docker-compose.dev.yaml  docker-compose.yaml  post-create-command.sh  postCreateCommand.sh  post_create.sh
.devcontainer/gpu/: devcontainer.json  docker-compose.yaml
.devcontainer/holoocean/: devcontainer.json  docker-compose.yaml
.docker/: Dockerfile.base  Dockerfile.dev  Dockerfile.gtsam  Dockerfile.runtime  entrypoint.sh
.docker/holoocean/: Dockerfile.holoocean  entrypoint.sh
.github/: dependabot.yml
.github/actions/setup-ros2-workspace/: action.yml
.github/assets/: easter_egg.py
.github/workflows/: docker_ci.yml  ros2_ci.yml  ros_ci.yml
.tmuxp/: coug_base.yaml  coug_dev.yaml
.tmuxp/intro/: display.py  introduction.txt
config/: blue0sim_params.yaml  bluerov2_params.yaml  coug0sim_params.yaml  coug1sim_params.yaml  coug2sim_params.yaml
config/fleet/: coug_active_fgo_params.yaml  coug_fgo_params.yaml  coug_navigation_params.yaml  holoocean_bridge_params.yaml
config/holoocean/: bluerov2_holoocean_params.yaml  bluerov2_openwater.json  coug_holoocean_params.yaml  couguv_holoocean_params.yaml  couguv_openwater.json  multi_coug_holoocean_params.yaml  multi_couguv_holoocean_params.yaml  multi_couguv_openwater.json
coug_ws/src/: cougars.repos
coug_ws/src/coug_fgo/: CMakeLists.txt  package.xml
coug_ws/src/coug_fgo/config/: coug_fgo_params.yaml  fgo_params.yaml
coug_ws/src/coug_fgo/include/coug_fgo/: factor_graph_node.hpp  navsat_preprocessor_node.hpp
coug_ws/src/coug_fgo/include/coug_fgo/factors/: ahrs_factor.hpp  constant_velocity_factor.hpp  depth_factor_arm.hpp  dvl_factor.hpp  dvl_preintegrated_factor.hpp  gps_factor_arm.hpp  hydrodynamic_factor_arm.hpp  mag_factor_arm.hpp
coug_ws/src/coug_fgo/include/coug_fgo/utils/: conversion_utils.hpp
coug_ws/src/coug_fgo/launch/: coug_fgo.launch.py
coug_ws/src/coug_fgo/params/: factor_graph_params.yaml  navsat_preprocessor_params.yaml
coug_ws/src/coug_fgo/src/: factor_graph_node.cpp  navsat_preprocessor_node.cpp
coug_ws/src/coug_fgo/test/: test_ahrs_factor.cpp  test_constant_velocity_factor.cpp  test_conversion_utils.cpp  test_depth_factor_arm.cpp  test_dvl_factor.cpp  test_dvl_preintegrated_factor.cpp  test_dvl_preintegrator.cpp  test_gps_factor_arm.cpp  test_hydrodynamic_factor_arm.cpp  test_mag_factor_arm.cpp
coug_ws/src/coug_gui/: CMakeLists.txt  package.xml
coug_ws/src/coug_gui/config/: bluerov2_mapviz_params.mvc  bluerov2_rviz_config.rviz  bluerov2_rviz_params.rviz  mapviz_config.mvc  mapviz_params.mvc  multi_mapviz_config.mvc  multi_mapviz_params.mvc  multi_rviz_params.rviz  rviz_params.rviz
coug_ws/src/coug_gui/launch/: coug_gui.launch.py  mapviz.launch.py  rviz.launch.py
coug_ws/src/coug_gui/mapviz/: bluerov2_mapviz_config.mvc  mapviz_config.mvc  multi_mapviz_config.mvc
coug_ws/src/coug_gui/rqt/: bluerov2_diagnostics_params.yaml  diagnostics_params.yaml  multi_diagnostics_params.yaml
coug_ws/src/coug_gui/rviz/: bluerov2_rviz_config.rviz  multi_rviz_config.rviz  rviz_config.rviz
coug_ws/src/coug_gui/scripts/: odom_to_path_node.py
coug_ws/src/coug_gui/src/: coug_waypoints_plugin.cpp
coug_ws/src/coug_gui/waypoints/: example.json
coug_ws/src/coug_navigation/: CMakeLists.txt
coug_ws/src/sensor_bridge/: package.xml
data/: T200-10V.csv  T200-12V.csv  T200-14V.csv  T200-16V.csv  T200-18V.csv  T200-20V.csv
docker/: .tmux.conf  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.gtsam  Dockerfile.holoocean  Dockerfile.runtime  completions.sh  docker-compose.yaml  entrypoint.sh
docker/gtsam/: Dockerfile
docker/holoocean/: Dockerfile.holoocean  entrypoint.sh
docker/startup/: introduction.txt
docs/: latex-packages.txt  sync_notebooks.sh
docs/diagrams/: fgo_diagrams.py  requirements.txt
docs/latex/: apt-packages.txt
docs/plots/: eval_fgo.sh  fgo_analysis.py  fgo_batch.py  fgo_plots.ipynb  fgo_plots.py  metrics_plot.py  requirements.txt  traj_plot.py
holoocean/: compose.sh  launch.sh
holoocean/config/: bluerov2_openwater.json  coug_openwater.json  multi_coug_openwater.json
holoocean/docker/: Dockerfile.holoocean  docker-compose.yaml  entrypoint.sh
media/: latex-packages.txt
media/diagrams/: fgo_diagrams.py  requirements.txt
media/plots/: evo_eval.sh  metrics_plot.py  proc_batch.sh  requirements.txt
ros2_ws/src/: packages.repos
ros2_ws/src/coug_mapviz/: package.xml
ros2_ws/src/coug_mapviz/include/coug_mapviz/: coug_waypoint_manager.hpp
ros2_ws/src/coug_mapviz/launch/: coug_mapviz.launch.py
ros2_ws/src/coug_mapviz/mapviz/: mapviz_config.mvc.template  multi_mapviz_config.mvc
ros2_ws/src/coug_mapviz/missions/: example.json
ros2_ws/src/coug_mapviz/src/: coug_waypoint_manager.cpp  coug_waypoints_plugin.cpp
ros2_ws/src/coug_mapviz/ui/: coug_waypoints_config.ui
ros2_ws/src/coug_mapviz/waypoints/: example.json
ros2_ws/src/coug_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/coug_navigation/config/: coug_navigation_params.yaml
ros2_ws/src/coug_navigation/include/coug_navigation/: waypoint_follower.hpp  waypoint_follower_node.hpp
ros2_ws/src/coug_navigation/launch/: coug_navigation.launch.py
ros2_ws/src/coug_navigation/params/: waypoint_follower_params.yaml
ros2_ws/src/coug_navigation/src/: waypoint_follower.cpp  waypoint_follower_main.cpp  waypoint_follower_node.cpp
ros2_ws/src/coug_navigation/test/: test_waypoint_follower.cpp  test_waypoint_follower_node.cpp
ros2_ws/src/sensor_bridge/: package.xml  setup.py
ros2_ws/src/sensor_bridge/config/: sensor_bridge_params.yaml
ros2_ws/src/sensor_bridge/launch/: sensor_bridge.launch.py
scripts/: bag_launch.sh  common.sh  dev_launch.sh  holoocean_launch.sh  key_teleop.sh  plot_covariances.py  plotjuggler.xml  replay_launch.sh  sim_launch.sh  viz_launch.sh
scripts/utils/: common.sh  run_precommit_hook.sh
tmuxp/: coug_auv.yaml  coug_base.yaml  coug_dev.yaml
tmuxp/intro/: display.py
(+72 files in other folders)
