<package format="3">
  <name>coug_gui</name>
  <version>0.0.0</version>
  <description>GUIs for the CougUV</description>
  <maintainer email="snelsondurrant@gmail.com">Nelson Durrant</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>qt5-qmake</buildtool_depend>

  <depend>libqt5-core</depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <build_depend>ros_environment</build_depend>

  <depend>ament_index_cpp</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>gps_msgs</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>map_msgs</depend>
  <depend condition="$ROS_BUILD_ARCH == 'amd64'">mapviz</depend>
  <depend condition="$ROS_BUILD_ARCH == 'amd64'">mapviz_plugins</depend>
  <depend condition="$ROS_BUILD_ARCH == 'amd64'">tile_map</depend>
  <depend>marti_common_msgs</depend>
  <depend>marti_nav_msgs</depend>
  <depend>marti_sensor_msgs</depend>
  <depend>marti_visualization_msgs</depend>
  <!-- move_base_msgs is commented out until MoveBasePlugin is ported to ROS 2 -->
  <!-- depend>move_base_msgs</depend -->
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>stereo_msgs</depend>
  <depend condition="$ROS_BUILD_ARCH == 'amd64'">swri_image_util</depend>
  <depend condition="$ROS_BUILD_ARCH == 'amd64'">swri_math_util</depend>
  <depend condition="$ROS_BUILD_ARCH == 'amd64'">swri_route_util</depend>
  <depend condition="$ROS_BUILD_ARCH == 'amd64'">swri_transform_util</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <depend>rviz2</depend>
  <depend>plotjuggler</depend>
  
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <mapviz plugin="${prefix}/mapviz_plugins.xml" />
  </export>

</package>
